--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Visualise My Orders - Orders Management System"
+      content="Orders Data Management System"
     />
 
-    <title>My Orders</title>
+    <title>OMS</title>
   </head>
   <body>
     <div id="root"></div>
