set up basic header UI

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Orders Data Management System"
     />
 
-    <title>Orders Management System</title>
+    <title>OMS</title>
   </head>
   <body>
     <div id="root"></div>
